update product-service